# fuzzy-poetry

./: .gitignore  .graphqlconfig.yml  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  dependencies.py  main.py  pyproject.toml
backend/api/: contact_email.py  poem_v1.py  poem_v2.py  poem_v3.py  poem_v4.py
backend/models/: poem_v1.py  poem_v3.py  poem_v4.py
backend/src/: dependencies.py  main.py
backend/src/api/: contact_email.py  health.py  image_upload.py  poem_v1.py  poem_v2.py  poem_v3.py  poem_v4.py  root.py
backend/src/config/: logging_config.py
backend/src/models/: common.py  contact_email.py  image_upload.py  poem_v1.py  poem_v2.py  poem_v3.py  poem_v4.py
backend/src/services/: image_service.py  notification_service.py  poem_v3_service.py  poem_v4_service.py
frontend/: Dockerfile  eslint.config.js  index.html  orval.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api-client.ts  api.ts  index.css  main.tsx
src/: API.ts  App.vue  aws-exports.ts  main.ts
src/assets/: base.css  main.css
src/components/: AlgorithmVersion1.vue  AlgorithmVersion2.vue  AlgorithmVersion3.vue  AlgorithmVersion4.vue  TheWelcome.vue  VersionItem.vue  WelcomeItem.vue
src/graphql/: mutations.ts  queries.ts  subscriptions.ts
src/models/: index.d.ts  index.js  schema.js
(+67 files in other folders)
