[project]
name = "fuzzy-poetry-api"
version = "0.1.0"
description = "The FastAPI backend for Fuzzy Poetry"
authors = [
    {name = "rskarp",email = "rkarp1997@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
